2014-08-06  François Déchelle  <francois@dechelle.net>

	* implemented first version; works and scans ok

